--- a/horizon-demo-system/src/main/resources/bootstrap-dev.yml
+++ b/horizon-demo-system/src/main/resources/bootstrap-dev.yml
@@ -30,3 +30,9 @@ jwt:
     key: classpath:jwt.key
   public:
     key: classpath:jwt.pub
+
+# server
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
