Infrastructure依赖security，而不是security依赖它

--- a/horizon-demo-system/pom.xml
+++ b/horizon-demo-system/pom.xml
@@ -11,11 +11,10 @@
     <artifactId>horizon-demo-system</artifactId>
 
 
-
     <dependencies>
         <dependency>
             <groupId>org.redcarp</groupId>
-            <artifactId>horizon-security-jwt</artifactId>
+            <artifactId>horizon-infrastructure</artifactId>
         </dependency>
 
     </dependencies>
