--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependencies>
             <dependency>
                 <groupId>org.redcarp</groupId>
-                <artifactId>horizon-security-jwt</artifactId>
+                <artifactId>horizon-infrastructure</artifactId>
                 <version>${horizon.version}</version>
             </dependency>
         </dependencies>
