将cloud依赖上移至应用层

--- a/horizon-demo-system/pom.xml
+++ b/horizon-demo-system/pom.xml
@@ -12,6 +12,11 @@
 
 
     <dependencies>
+        <!-- cloud项目-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.redcarp</groupId>
             <artifactId>horizon-infrastructure</artifactId>
