--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,20 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>2.7.18</spring.boot.version>
         <horizon.version>1.1.0-SNAPSHOT</horizon.version>
+        <spring-cloud.version>2021.0.8</spring-cloud.version>
     </properties>
 
 
     <dependencyManagement>
         <dependencies>
+            <!-- SpringCloud 微服务 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.redcarp</groupId>
                 <artifactId>horizon-infrastructure</artifactId>
