微服务调用加上bearer token

--- a/horizon-demo-test/pom.xml
+++ b/horizon-demo-test/pom.xml
@@ -24,5 +24,9 @@
             <groupId>org.redcarp</groupId>
             <artifactId>horizon-security-jwt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redcarp</groupId>
+            <artifactId>horizon-api-client</artifactId>
+        </dependency>
     </dependencies>
 </project>
