--- a/horizon-demo-system/src/main/resources/bootstrap-dev.yml
+++ b/horizon-demo-system/src/main/resources/bootstrap-dev.yml
@@ -16,8 +16,8 @@ spring:
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    # 配置Druid数据源
-    type: com.alibaba.druid.pool.DruidDataSource
+    # 配置Druid数据源,XA事务管理器必须要用XADataSource
+    type: com.alibaba.druid.pool.xa.DruidXADataSource
     druid:
       initial-size: 5
       min-idle: 5
@@ -28,6 +28,7 @@ spring:
 
   flyway:
     baseline-on-migrate: true
+
 # jwt
 jwt:
   private:
@@ -40,3 +41,4 @@ server:
   error:
     include-message: always
     include-binding-errors: always
+
