--- a/horizon-demo-system/pom.xml
+++ b/horizon-demo-system/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.redcarp</groupId>
             <artifactId>horizon-infrastructure</artifactId>
         </dependency>
