--- a/horizon-demo-system/src/main/resources/bootstrap-dev.yml
+++ b/horizon-demo-system/src/main/resources/bootstrap-dev.yml
@@ -45,4 +45,8 @@ server:
   error:
     include-message: always
     include-binding-errors: always
-
+# eureka
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
